package warehouse;

public interface Order {

    void addProduct (Products p);
    void addSupplier (Supplier s);
}
